--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment_08</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    
+    <div class="simple-navber">
+        <ul class="search">
+            <a href="https://www.facebook.com"><li 
+            class="search-ber">FaceBook</li></a>
+            <a href="https://www.instagram.com"><li class="search-ber">Instagram</li></a>
+            <a href="https://www.twitter.com"><li class="search-ber">Twitter</li></a>
+            <a href="https://www.whatsapp.com"><li class="search-ber">WhatsApp</li></a>
+        </ul>
+    </div>
+    <ol>
+        <li class="pesiduo">Biscuit</li>
+        <li class="pesiduo">Chips</li>
+        <li class="pesiduo">Juice</li>
+        <li class="pesiduo">Mango</li>
+        <li class="pesiduo">Banana</li>
+    </ol>
+    <h1>My name is Ariful - 1</h1>
+    <h1>My name is Ariful - 2</h1>
+    <h1>My name is Ariful - 3</h1>
+    <h1>My name is Ariful - 4</h1>
+
 </body>
 </html>
