--- a/listitem.html
+++ b/listitem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment_08</title>
+    <title>List_item</title>
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
@@ -17,10 +17,21 @@
             </ul>
         </nav>
     </header>
-    <main class="possition">
-        <img class="image baccha" src="/image/boy.svg" alt="">
-        <img class="image ring" src="/image/ring.svg" alt="">
-        <img class="image water" src="/image/water.svg" alt="">
-    </main>
+    <div>
+        <ol>
+            <li class="pesiduo">Mango</li>
+            <li class="pesiduo">Banana</li>
+            <li class="pesiduo">Chips</li>
+            <li class="pesiduo">Juice</li>
+            <li class="pesiduo">Chocolate</li>
+        </ol>
+    </div>
+    <div class="list">
+        <h1>Hello! World-1</h1> 
+        <h1>Hello! World-1</h1> 
+        <h1>Hello! World-3</h1> 
+        <h1>Hello! World-4</h1> 
+        <h1>Hello! World-5</h1> 
+    </div>
 </body>
 </html>
