--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </nav>
     </header>
     <main class="possition">
-        <img class="image baccha" src="/image/boy.svg" alt="">
-        <img class="image ring" src="/image/ring.svg" alt="">
-        <img class="image water" src="/image/water.svg" alt="">
+        <img class="image baccha" src="./image/boy.svg" alt="">
+        <img class="image ring" src="./image/ring.svg" alt="">
+        <img class="image water" src="./image/water.svg" alt="">
     </main>
 </body>
 </html>
